// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logs to stderr if fetch network-errors 1`] = `
Object {
  "childProcess": Object {
    "status": undefined,
    "stderr": "Failed to contact GitHub API: TypeError: Only absolute URLs are supported
",
    "stdout": "",
  },
  "inProcess": Object {
    "stderr": Array [
      Array [
        "Failed to contact GitHub API: TypeError: Only absolute URLs are supported",
      ],
    ],
    "stdout": Array [],
  },
}
`;

exports[`logs to stderr if response comes back non-200 1`] = `
Object {
  "childProcess": Object {
    "status": undefined,
    "stderr": "Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/missing/branch\\"
  }
}

Response: {\\"data\\":{\\"repository\\":{\\"ref\\":{\\"associatedPullRequests\\":{}}}}}

Error: HTTP 404

",
    "stdout": "",
  },
  "inProcess": Object {
    "stderr": Array [
      Array [
        "Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/missing/branch\\"
  }
}

Response: {\\"data\\":{\\"repository\\":{\\"ref\\":{\\"associatedPullRequests\\":{}}}}}

Error: HTTP 404
",
      ],
    ],
    "stdout": Array [],
  },
}
`;

exports[`logs to stderr if response comes back non-200 2`] = `
Array [
  Object {
    "body": "{
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/missing/branch\\"
  }
}",
    "method": "POST",
  },
]
`;

exports[`logs to stderr some PR env vars exist but not all of them 1`] = `
Object {
  "childProcess": Object {
    "status": undefined,
    "stderr": "Some pull request environment variables are present, and others
are not. DangerCI may not correctly identify this as a pull request. Check the
CircleCI \\"Spin up environment\\" step to see build environment variables.

        Pull request from: new-genesis/orion
        instead of:        apokolips/darkseid


Found no pull requests on GitHub for undefined.
",
    "stdout": "",
  },
  "inProcess": Object {
    "stderr": Array [
      Array [
        "Some pull request environment variables are present, and others
are not. DangerCI may not correctly identify this as a pull request. Check the
CircleCI \\"Spin up environment\\" step to see build environment variables.

        Pull request from: new-genesis/orion
        instead of:        apokolips/darkseid

",
      ],
      Array [
        "Found no pull requests on GitHub for undefined.",
      ],
    ],
    "stdout": Array [],
  },
}
`;

exports[`logs to stderr some PR env vars exist but not all of them 2`] = `
Array [
  Object {
    "body": "{
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/undefined\\"
  }
}",
    "method": "POST",
  },
]
`;

exports[`logs to stderr that PR env vars are already set and exits 1`] = `
Object {
  "childProcess": Object {
    "status": undefined,
    "stderr": "No change: CircleCI has already populated pull request variables
for this build, so 'danger ci' should run as expected.

Pull Request: https://github.com/someOwner/someRepo/pulls/4 from darkseid
",
    "stdout": "",
  },
  "inProcess": Object {
    "stderr": Array [
      Array [
        "No change: CircleCI has already populated pull request variables
for this build, so 'danger ci' should run as expected.

Pull Request: https://github.com/someOwner/someRepo/pulls/4 from darkseid",
      ],
    ],
    "stdout": Array [],
  },
}
`;

exports[`writes script that sets env vars to stdout if pr exists 1`] = `
Object {
  "childProcess": Object {
    "status": undefined,
    "stderr": "",
    "stdout": "
CI_PULL_REQUEST=\\"https://github.com/found/me\\"
CI_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUEST=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PR_NUMBER=\\"420\\"

",
  },
  "inProcess": Object {
    "stderr": Array [],
    "stdout": Array [
      Array [
        "
CI_PULL_REQUEST=\\"https://github.com/found/me\\"
CI_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUEST=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PR_NUMBER=\\"420\\"
",
      ],
    ],
  },
}
`;

exports[`writes script that sets env vars to stdout if pr exists 2`] = `
Array [
  Object {
    "body": "{
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/missing/branch\\"
  }
}",
    "method": "POST",
  },
]
`;
